# golden-trading

./: .env.example  README.md  main.py  messages.txt  pyproject.toml  settings.py
db/: db_setup.py
db/models/: user_model.py
db/schemas/: authentication_schema.py  user_schema.py
migrations/: env.py
migrations/versions/: 2024-02-06-02-51-12_09284ca1d64b_user_model.py
routers/: authentication.py  faq.py  rabbitmq.py  users.py
services/: authentication_service.py  rabbitmq_consume_service.py  rabbitmq_send_service.py  user_service.py
utils/: send_email.py
